--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,6 +1,6 @@
-name: template
-description: A template Flutter Project
-version: 1.0.0+1
+name: electronic_student_journal
+description: Electronic student journal
+version: 0.1.0+1
 publish_to: none
 
 environment:
@@ -22,6 +22,7 @@ dependencies:
   flutter_screenutil: ^5.5.3+2
   formz: ^0.5.0-dev.1
   freezed_annotation: ^2.1.0
+  get_it: ^7.2.0
   go_router: ^6.0.0
   google_fonts: ^3.0.1
   injectable: ^2.1.0
@@ -38,11 +39,10 @@ dev_dependencies:
   flutter_test:
     sdk: flutter
   freezed: ^2.1.0+1
-  get_it: ^7.2.0
   injectable_generator: ^2.1.3
   json_serializable: ^6.3.1
   mocktail: ^0.3.0
-  very_good_analysis: ^3.0.1
+  very_good_analysis: ^4.0.0
 
 flutter_gen:
   output: lib/gen/ # Optional (default: lib/gen/)
