--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -50,9 +50,9 @@ jobs:
       # - name: 🧪 Run Tests
       #   run: very_good test -j 4 --optimization --coverage --test-randomize-ordering-seed random
 
-      - name: 📊 Check Code Coverage
-        uses: VeryGoodOpenSource/very_good_coverage@v1
-        with:
-          path: ./coverage/lcov.info
-          exclude: "*.g.dart *.freezed.dart *.config.dart *.gen.dart"
-          min_coverage: 60
+      # - name: 📊 Check Code Coverage
+      #   uses: VeryGoodOpenSource/very_good_coverage@v1
+      #   with:
+      #     path: ./coverage/lcov.info
+      #     exclude: "*.g.dart *.freezed.dart *.config.dart *.gen.dart"
+      #     min_coverage: 60
