--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -7,7 +7,10 @@ environment:
   sdk: '>=2.19.6 <3.0.0'
 
 dependencies:
+  cloud_firestore: ^4.5.2
   equatable: ^2.0.5
+  firebase_auth: ^4.4.2
+  firebase_core: ^2.10.0
   flutter:
     sdk: flutter
   flutter_localizations:
