--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -16,6 +16,8 @@ dependencies:
   flutter_localizations:
     sdk: flutter
   flutter_screenutil: ^5.7.0
+  freezed_annotation: ^2.2.0
+  json_annotation: ^4.8.0
 
 
 dev_dependencies:
@@ -24,6 +26,8 @@ dev_dependencies:
   flutter_lints: ^2.0.0
   flutter_test:
     sdk: flutter
+  freezed: ^2.3.2
+  json_serializable: ^6.6.1
   very_good_analysis: ^4.0.0+1
 
 flutter_gen:
