--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -18,6 +18,7 @@ dependencies:
   flutter_screenutil: ^5.7.0
   freezed_annotation: ^2.2.0
   json_annotation: ^4.8.0
+  uuid: ^3.0.7
 
 
 dev_dependencies:
