--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -8,6 +8,7 @@ environment:
 
 dependencies:
   cloud_firestore: ^4.5.2
+  dartz: ^0.10.1
   equatable: ^2.0.5
   firebase_auth: ^4.4.2
   firebase_core: ^2.10.0
