--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -7,6 +7,7 @@ environment:
   sdk: '>=2.19.6 <3.0.0'
 
 dependencies:
+  bloc: ^8.1.1
   cloud_firestore: ^4.5.2
   dartz: ^0.10.1
   equatable: ^2.0.5
