--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,7 +34,7 @@ dev_dependencies:
   very_good_analysis: ^4.0.0+1
 
 flutter_gen:
-  output: lib/gen/ # Optional (default: lib/gen/)
+  output: lib/core/gen/ # Optional (default: lib/gen/)
   line_length: 80 # Optional (default: 80)
 
 flutter:
