Add rules and errors to analysis_options.yaml

--- a/analysis_options.yaml
+++ b/analysis_options.yaml
@@ -1,4 +1,7 @@
 include: package:very_good_analysis/analysis_options.4.0.0.yaml
+linter: 
+  rules:
+    public_member_api_docs: false
 analyzer:
   exclude:
     - "**/*.g.dart"
@@ -8,3 +11,6 @@ analyzer:
     - lib/firebase_options.dart
     - lib/firebase_options_dev.dart
     - lib/firebase_options_stg.dart
+  errors:
+    invalid_annotation_target: ignore
+    one_member_abstracts: ignore
