--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -7,7 +7,6 @@ environment:
   sdk: '>=2.19.6 <3.0.0'
 
 dependencies:
-  bloc: ^8.1.1
   cloud_firestore: ^4.5.2
   dartz: ^0.10.1
   equatable: ^2.0.5
@@ -15,6 +14,7 @@ dependencies:
   firebase_core: ^2.10.0
   flutter:
     sdk: flutter
+  flutter_bloc: ^8.1.2
   flutter_localizations:
     sdk: flutter
   flutter_screenutil: ^5.7.0
