--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -20,6 +20,7 @@ dependencies:
   flutter_screenutil: ^5.7.0
   freezed_annotation: ^2.2.0
   json_annotation: ^4.8.0
+  logger: ^1.3.0
   uuid: ^3.0.7
 
 
