--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -19,6 +19,7 @@ dependencies:
     sdk: flutter
   flutter_screenutil: ^5.7.0
   freezed_annotation: ^2.2.0
+  go_router: ^7.0.0
   json_annotation: ^4.8.0
   logger: ^1.3.0
   uuid: ^3.0.7
