--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -8,6 +8,7 @@ environment:
 
 dependencies:
   cloud_firestore: ^4.5.2
+  cupertino_icons: ^1.0.5
   dartz: ^0.10.1
   equatable: ^2.0.5
   firebase_auth: ^4.4.2
