--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -31,6 +31,7 @@ dev_dependencies:
   build_runner: ^2.3.3
   flutter_gen_runner: ^5.3.0
   flutter_lints: ^2.0.0
+  flutter_native_splash: ^2.3.0
   flutter_test:
     sdk: flutter
   freezed: ^2.3.2
@@ -46,3 +47,7 @@ flutter:
   generate: true
   assets:
     - assets/images/
+
+flutter_native_splash:
+  color: '#ffffff'
+  image: assets/images/splash.png
