--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -22,6 +22,7 @@ dependencies:
   freezed_annotation: ^2.2.0
   get_it: ^7.3.0
   go_router: ^7.0.0
+  google_fonts: ^4.0.5
   json_annotation: ^4.8.0
   logger: ^1.3.0
   provider: ^6.0.5
