--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -23,6 +23,7 @@ dependencies:
   get_it: ^7.3.0
   go_router: ^7.0.0
   google_fonts: ^4.0.5
+  intl: ^0.18.0
   json_annotation: ^4.8.0
   logger: ^1.3.0
   provider: ^6.0.5
