--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,7 +1,7 @@
 name: electronic_student_journal
 description: Electronic student journal application
 publish_to: 'none' 
-version: 0.4.0+1
+version: 0.6.0+1
 
 environment:
   sdk: ^3.0.0
@@ -11,6 +11,7 @@ dependencies:
   cupertino_icons: ^1.0.5
   dartz: ^0.10.1
   equatable: ^2.0.5
+  excel: ^2.1.0
   firebase_auth: ^4.4.2
   firebase_core: ^2.10.0
   flutter:
@@ -26,6 +27,8 @@ dependencies:
   intl: ^0.18.0
   json_annotation: ^4.8.0
   logger: ^1.3.0
+  path_provider: ^2.0.15
+  permission_handler: ^10.3.0
   provider: ^6.0.5
 
 
