--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,7 +1,7 @@
 name: electronic_student_journal
 description: Electronic student journal application
 publish_to: 'none' 
-version: 0.6.0+1
+version: 0.7.0+1
 
 environment:
   sdk: ^3.0.0
@@ -27,6 +27,7 @@ dependencies:
   intl: ^0.18.0
   json_annotation: ^4.8.0
   logger: ^1.3.0
+  overlay_support: ^2.1.0
   path_provider: ^2.0.15  
   provider: ^6.0.5
 
