--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,6 +30,7 @@ dependencies:
   overlay_support: ^2.1.0
   path_provider: ^2.0.15  
   provider: ^6.0.5
+  shared_preferences: ^2.1.2
 
 
 dev_dependencies:
