--- a/analysis_options.yaml
+++ b/analysis_options.yaml
@@ -14,3 +14,4 @@ analyzer:
   errors:
     invalid_annotation_target: ignore
     one_member_abstracts: ignore
+    lines_longer_than_80_chars: ignore
