--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,7 +1,7 @@
 name: electronic_student_journal
 description: Electronic student journal application
 publish_to: 'none' 
-version: 1.0.0+1
+version: 1.0.1+1
 
 environment:
   sdk: ^3.0.0
@@ -29,6 +29,7 @@ dependencies:
   logger: ^1.3.0
   overlay_support: ^2.1.0
   path_provider: ^2.0.15  
+  permission_handler: ^10.3.0
   provider: ^6.0.5
   shared_preferences: ^2.1.2
 
